--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FCC Product Landing Page</title>
+    <title>LPU Product Landing Page</title>
     <link href="https://fonts.googleapis.com/css?family=Unica+One&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
